@startuml
Class Order {
   ordernumber
   date
}

class User {
   email
   password
   balance
}

class Cupcake {
}

class Topping {
    name
    price
}

class Bottom {
   name
   price
}

User "1" --> "*" Order : places >
Order "1" --> "*" Cupcake : contains >
Cupcake "1" --> "1" Topping : has >
Cupcake "1" --> "1" Bottom : has >
@enduml
